Add site header

--- a/index.html
+++ b/index.html
@@ -5,11 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CoffeeRoasters</title>
+    <link rel="icon" href="Images/icons/logo.svg">
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+
     <!-- Styles -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <header class="site-header">
+        <div class="container site-header-container">
+            <a href="index.html" class="logo">
+                <img class="logo-img" src="Images/icons/logo-img.svg" alt="CoffeeRoasters">
+            </a>
+            <nav class="site-nav">
+                <ul class="site-nav-list">
+                    <li class="list-item">
+                        <a href="index.html" class="list-item-link">home</a>
+                    </li>
+                    <li class="list-item">
+                        <a href="about.html" class="list-item-link">about us</a>
+                    </li>
+                    <li class="list-item">
+                        <a href="plans.html" class="list-item-link">create your plan</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
