--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
     <div class="site-header-hero-wrapper">
         <header class="site-header">
             <div class="site-header-container container">
-            <a class="site-header-logo-link" href="index.html">
+                <a class="site-header-logo-link" href="index.html">
                 <img class="site-header-logo-img" src="Images/icons/logo-img.svg" alt="CoffeeRoasters logo" width="235" height="24">
-            </a>
+                </a>
 
         <!-- SITENAV -->
-            <nav class="sitenav">
+                <nav class="sitenav">
                 <ul class="sitenav-list">
                     <li class="sitenav-item"><a class="sitenav-link" href="#">Home</a></li>
                     <li class="sitenav-item"><a class="sitenav-link" href="#">About</a></li>
                     <li class="sitenav-item"><a class="sitenav-link" href="#">Create your plan</a></li>
                 </ul>
-            </nav>
-      </div>
-    </header>
+                </nav>
+            </div>
+        </header>
         <div class="hero">
             <div class="hero-container container">
                 <div class="hero-info-wrapper">
@@ -49,5 +49,69 @@
             </div>
         </div>
     </div>
+    <main class="main-content">
+        <section class="index-collection">
+            <div class="container">
+                <div class="index-collection-inner">
+                    <h2 class="index-collection-heading">our collection</h2>
+                    <ul class="index-collection-list">
+                        <li class="index-collection-item">
+                            <img class="index-collection-img" src="Images/danche.png" alt="Danche" srcset="Images/danche.png 1x, Images/danche@2x.png 2x">
+                            <div class="index-collection-info">
+                                <h3 class="index-collection-title">Danche</h3>
+                                <p class="index-collection-text">Ethiopian hand-harvested blend densely packed with vibrant fruit notes.</p>
+                            </div>
+                        </li>
+                        <li class="index-collection-item">
+                            <img class="index-collection-img" src="Images/gran-espresso.png" alt="Gran Espresso" srcset="Images/gran-espresso.png 1x, Images/gran-espresso@2x.png 2x">
+                            <div class="index-collection-info">
+                                <h3 class="index-collection-title">Gran Espresso</h3>
+                                <p class="index-collection-text">Light and flavorful blend with cocoa and black pepper for an intense experience.</p>
+                            </div>
+                        </li>
+                        <li class="index-collection-item">
+                            <img class="index-collection-img" src="Images/piccollo.png" alt="Piccollo" srcset="Images/piccollo.png 1x, Images/piccollo@2x.png 2x">
+                            <div class="index-collection-info">
+                                <h3 class="index-collection-title">Piccollo</h3>
+                                <p class="index-collection-text">Mild and smooth blend featuring notes of toasted almond and dried cherry.</p>
+                            </div>
+                        </li>
+                        <li class="index-collection-item">
+                            <img class="index-collection-img" src="Images/planalto.png" alt="Planalto" srcset="Images/planalto.png 1x, Images/planalto@2x.png 2x">
+                            <div class="index-collection-info">
+                                <h3 class="index-collection-title">Planalto</h3>
+                                <p class="index-collection-text">Brazilian dark roast with rich and velvety body, and hints of fruits and nuts.</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <section class="index-features">
+            <div class="container">
+                <div class="index-features-inner">
+                    <h2 class="index-features-heading">why choose us</h2>
+                    <p class="index-features-lead">A large part of our role is choosing which particular coffees will be featured in our range. This means working closely with the best coffee growers to give you a more impactful experience on every level.</p>
+                    <ul class="index-features-list">
+                        <li class="index-features-item">
+                            <img src="Images/features-quality.jpg" alt="coffee factory worker smelling beans" class="index-features-img" srcset="Images/features-quality.jpg 1x, Images/features-quality@2x.jpg 2x">
+                            <h3 class="index-features-item-title">Best quality</h3>
+                            <p class="index-features-text">Discover an endless variety of the world’s best artisan coffee from each of our roasters.</p>
+                        </li>
+                        <li class="index-features-item">
+                            <img src="Images/features-benefits.jpg" alt="Coffee being filtered into a glass pot" class="index-features-img" srcset="Images/features-benefits.jpg 1x, Images/features-benefits@2x.jpg 2x">
+                            <h3 class="index-features-item-title">Exclusive benefits</h3>
+                            <p class="index-features-text">Special offers and swag when you subscribe, including 30% off your first shipment.</p>
+                        </li>
+                        <li class="index-features-item">
+                            <img src="Images/features-shipping.jpg" alt="Coffee shop worker giving coffee to customer" class="index-features-img" srcset="Images/features-shipping.jpg 1x, Images/features-shipping@2x.jpg 2x">
+                            <h3 class="index-features-item-title">Free shipping</h3>
+                            <p class="index-features-text">We cover the cost and coffee is delivered fast. Peak freshness: guaranteed.</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
