--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
         </section>
         <section class="index-features">
-            <div class="container">
+           <div class="container">
                 <div class="index-features-inner">
                     <h2 class="index-features-heading">why choose us</h2>
                     <p class="index-features-lead">A large part of our role is choosing which particular coffees will be featured in our range. This means working closely with the best coffee growers to give you a more impactful experience on every level.</p>
@@ -109,6 +109,34 @@
                             <p class="index-features-text">We cover the cost and coffee is delivered fast. Peak freshness: guaranteed.</p>
                         </li>
                     </ul>
+                </div>
+            </div>
+        </section>
+        <section class="how-it-works">
+            <div class="container">
+                <div class="how-it-works-inner">
+                    <h2 class="how-it-works-heading">How it works</h2>
+                    <ol class="how-it-works-list">
+                        <li class="how-it-works-item">
+                            <div class="how-it-works-info">
+                                <h3 class="how-it-works-title">Pick your <br> coffee</h3>
+                                <p class="how-it-works-text">Select from our evolving range of artisan coffees. Our beans are ethically sourced and we pay fair prices for them. There are new coffees in all profiles every month for you to try out.</p>
+                            </div>
+                        </li>
+                        <li class="how-it-works-item">
+                            <div class="how-it-works-info">
+                                <h3 class="how-it-works-title">Choose the frequency</h3>
+                                <p class="how-it-works-text">Customize your order frequency, quantity, even your roast style and grind type. Pause, skip or cancel your subscription with no commitment through our online portal.</p>
+                            </div>
+                        </li>
+                        <li class="how-it-works-item">
+                            <div class="how-it-works-info">
+                                <h3 class="how-it-works-title">Receive and enjoy!</h3>
+                                <p class="how-it-works-text">We ship your package within 48 hours, freshly roasted. Sit back and enjoy award-winning world-class coffees curated to provide a distinct tasting experience.</p>
+                            </div>
+                        </li>
+                    </ol>
+                    <a href="#" class="btn btn-brown how-it-works-btn-cta">Create your plan</a>
                 </div>
             </div>
         </section>
